# qqmusicdownloader

./: .gitignore  AGENTS.md  CHANGELOG  CLAUDE.md  CODE_OF_CONDUCT.md  LICENSE  README.md  README.rst  asset-manifest.json  index.html  package.json  pnpm-lock.yaml  pyproject.toml
.claude/: index.json
.claude/plan/: ui拆分.md  重构src目录.md
docs/: CLAUDE.md
music-downloader-site/: CLAUDE.md  README.md  package-lock.json  package.json  tailwind.config.js
music-downloader-site/public/: index.html
music-downloader-site/src/: App.css  App.js  index.css  index.js
qqmusic_env/: pyvenv.cfg
qqmusic_env/Scripts/: activate  activate.bat
src/qq_music_downloader/: CLAUDE.md  __init__.py  __main__.py  app.py  crypto_bridge.py  downloader.py  new_api_probe.py  qq_music_api.py  ui.py
src/qqmusicdownloader/: CLAUDE.md  __init__.py  __main__.py
static/css/: main.16ea9ddb.css  main.16ea9ddb.css.map  main.40cf2497.css  main.40cf2497.css.map  main.5e06773e.css  main.5e06773e.css.map  main.62880f4d.css  main.62880f4d.css.map  main.7dc8fd45.css  main.7dc8fd45.css.map  main.c482704d.css  main.c482704d.css.map  main.eb341b32.css  main.eb341b32.css.map
static/js/: main.12c915cf.js  main.12c915cf.js.map  main.1e4db5b7.js  main.1e4db5b7.js.map  main.4296da3c.js  main.4296da3c.js.map  main.484ba394.js  main.484ba394.js.map  main.4f4e5307.js  main.4f4e5307.js.map  main.53a3801a.js  main.53a3801a.js.map  main.b7e6cb8e.js  main.b7e6cb8e.js.map  main.d158bed1.js  main.d158bed1.js.map  main.dac280f5.js  main.dac280f5.js.map  main.df37ed52.js  main.df37ed52.js.map
tests/: CLAUDE.md
tests/integration/: test_service_flow.py
tests/ui/: test_app_flow.py
tests/unit/: test_download_service.py
(+35 files in other folders)
