[project]
name = "qqmusicdownloader"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiofiles>=24.1.0",
    "aiohttp>=3.12.15",
    "textual>=0.58.1",
    "pytest>=8.4.2",
    "pytest-asyncio>=0.23.6",
    "ruff>=0.13.1",
]

[project.scripts]
qqmusicdownloader = "qqmusicdownloader.ui.app:main"

[tool.uv]
package = true
